syntax = "proto3";

package coupons;
option go_package = "./coupons";
enum CouponType {
  COUPON_TYPE_UNSPECIFIED = 0; // 未指定
  COUPON_TYPE_FULL_REDUCTION = 1; // 满减券
  COUPON_TYPE_DISCOUNT = 2; // 折扣券
  COUPON_TYPE_FIXED_AMOUNT = 3; // 立减券
}
// 优惠券信息
message Coupon {
  string id = 1; // 优惠券ID
  string name = 2; // 券名称
  CouponType type = 3; // 类型：1-满减 2-折扣 3-立减
  int32 value = 4; // 优惠值（根据类型：分/百分比）
  int32 min_amount = 5; // 最低消费金额（分）
  string start_time = 6; // 有效期开始
  string end_time = 7; // 有效期结束
  int32 status = 8; // 状态：0-禁用 1-启用
  int32 total_count = 9; // 发行总量
  int32 remaining_count = 10; // 剩余数量
  string created_at = 11; // 创建时间
  string updated_at = 12; // 更新时间
}
enum CouponStatus {
  COUPON_STATUS_UNSPECIFIED = 0; // 未指定
  COUPON_STATUS_NOT_USED = 1; // 未使用
  COUPON_STATUS_USED = 2; // 已使用
  COUPON_STATUS_EXPIRED = 3; // 已过期
}
// 用户优惠券信息
message UserCoupon {
  int32 id = 1; // 用户优惠券ID
  int32 user_id = 2; // 用户ID
  string coupon_id = 3; // 优惠券ID
  CouponStatus status = 4; // 状态：0-未使用 1-已使用 2-已过期
  string order_id = 5; // 使用的订单ID
  string used_at = 6; // 使用时间
  string created_at = 7; // 创建时间
  string updated_at = 8; // 更新时间
}

// 优惠券使用记录
message CouponUsage {
  int32 id = 1; // 使用记录ID
  string order_id = 2; // 关联的订单ID
  string coupon_id = 3; // 优惠券ID
  int32 user_id = 4; // 用户ID
  CouponType coupon_type = 5; // 当时优惠券类型：1-满减 2-折扣 3-立减
  int32 origin_value = 6; // 当时优惠值（根据类型：分/百分比）
  int32 discount_amount = 7; // 抵扣金额（分）
  string applied_at = 8; // 应用时间
}

// 分页请求
message PaginationReq {
  int32 page = 1; // 页码
  int32 limit = 2; // 每页记录数
}

// 获取优惠券列表请求
message ListCouponsReq {
  PaginationReq pagination = 1;
  int32 type = 2; // 可选：优惠券类型
  int32 status = 3; // 可选：优惠券状态
}

// 获取优惠券列表响应
message ListCouponsResp {
  repeated Coupon coupons = 1;
  int32 total_count = 2;
}

// 获取单个优惠券请求
message GetCouponReq {
  string id = 1; // 优惠券ID
}

// 获取单个优惠券响应
message GetCouponResp {
  Coupon coupon = 1;
}

// 创建优惠券请求
message CreateCouponReq {
  Coupon coupon = 1;
}

// 创建优惠券响应
message CreateCouponResp {
  string id = 1; // 创建的优惠券ID
}

// 更新优惠券请求
message UpdateCouponReq {
  string id = 1; // 优惠券ID
  Coupon coupon = 2; // 更新的优惠券信息
}

// 更新优惠券响应
message UpdateCouponResp {
  bool success = 1; // 更新结果
}

// 删除优惠券请求
message DeleteCouponReq {
  string id = 1; // 优惠券ID
}

// 删除优惠券响应
message DeleteCouponResp {
  bool success = 1; // 删除结果
}

// 获取用户优惠券列表请求
message ListUserCouponsReq {
  int32 user_id = 1; // 用户ID
  PaginationReq pagination = 2;
  int32 status = 3; // 可选：优惠券状态
}

// 获取用户优惠券列表响应
message ListUserCouponsResp {
  repeated UserCoupon user_coupons = 1;
  int32 total_count = 2;
}

// 获取用户优惠券详情请求
message GetUserCouponReq {
  int32 id = 1; // 用户优惠券ID
}

// 获取用户优惠券详情响应
message GetUserCouponResp {
  UserCoupon user_coupon = 1;
}

// 用户领取优惠券请求
message ClaimCouponReq {
  int32 user_id = 1; // 用户ID
  string coupon_id = 2; // 优惠券ID
}

// 用户领取优惠券响应
message ClaimCouponResp {
  bool success = 1; // 领取结果
}

// 使用优惠券请求
message UseCouponReq {
  int32 user_id = 1; // 用户ID
  string coupon_id = 2; // 优惠券ID
  string order_id = 3; // 订单ID
}

// 使用优惠券响应
message UseCouponResp {
  bool success = 1; // 使用结果
  int32 discount_amount = 2; // 抵扣金额（分）
}

// 获取优惠券使用记录请求
message ListCouponUsagesReq {
  string coupon_id = 1; // 优惠券ID
  PaginationReq pagination = 2;
}

// 获取优惠券使用记录响应
message ListCouponUsagesResp {
  repeated CouponUsage usages = 1;
  int32 total_count = 2;

}

// 优惠券服务
service Coupons {
  // -------------------- 优惠券相关 --------------------

  //  ListCoupons 获取优惠券列表
  rpc ListCoupons(ListCouponsReq) returns(ListCouponsResp);
  //  GetCoupon 获取单个优惠券
  rpc GetCoupon(GetCouponReq) returns(GetCouponResp);
  //  CreateCoupon 创建优惠券
  rpc CreateCoupon(CreateCouponReq) returns(CreateCouponResp);
  //  UpdateCoupon 更新优惠券
  rpc UpdateCoupon(UpdateCouponReq) returns(UpdateCouponResp);
  //  DeleteCoupon 删除优惠券
  rpc DeleteCoupon(DeleteCouponReq) returns(DeleteCouponResp);


  // -------------------- 用户优惠券相关 --------------------

  //  ListUserCoupons 获取用户优惠券列表
  rpc ListUserCoupons(ListUserCouponsReq) returns(ListUserCouponsResp);
  //  GetUserCoupon 获取用户优惠券详情
  rpc GetUserCoupon(GetUserCouponReq) returns(GetUserCouponResp);
  //  ClaimCoupon 用户领取优惠券
  rpc ClaimCoupon(ClaimCouponReq) returns(ClaimCouponResp);
  //  UseCoupon 使用优惠券
  rpc UseCoupon(UseCouponReq) returns(UseCouponResp);
  //  ListCouponUsages 获取优惠券使用记录
  rpc ListCouponUsages(ListCouponUsagesReq) returns(ListCouponUsagesResp);
}